[metadata]
name = setl
version = attr: setl.__version__
description = Packaging tool for PEP 518 projects with Setuptools backend.
long_description = file: README.rst

license = ISC
url = https://github.com/uranusjr/setl

author = Tzu-ping Chung
author_email = uranusjr@gmail.com

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8
install_requires =
	pep517
	pip
	toml
	twine

zip_safe = true

[options.packages.find]
where = src

[options.extras_require]
test =
	pytest

[options.entry_points]
console_scripts =
    setl = setl.__main__:main

[bdist_wheel]
universal = 1
