[metadata]
name = setl
version = attr: setl.__version__
description = Packaging tool for PEP 518 projects with Setuptools backend.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Build Tools
	Topic :: System :: Archiving :: Packaging
	Topic :: System :: Software Distribution
	Topic :: Utilities

license = ISC
url = https://github.com/uranusjr/setl

author = Tzu-ping Chung
author_email = uranusjr@gmail.com

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8
install_requires =
	packaging
	pep517
	toml
	twine

zip_safe = true

[options.packages.find]
where = src

[options.extras_require]
test =
	pytest

[options.entry_points]
console_scripts =
    setl = setl.__main__:main

[bdist_wheel]
universal = 1
